[package]
name = "crosslem"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
xilem_web = { git = "https://github.com/linebender/xilem.git", optional = true }
xilem = { git = "https://github.com/linebender/xilem.git", optional = true }

# Same as in the Stable section
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
default = ["native"]
native = ["dep:xilem"]
web = ["dep:xilem_web"]
